# finance-app

./: .gitignore  README.md  pyproject.toml  system-architecture.drawio
services/lambda_data_fetcher/: .gitignore  docker_command.zsh  make_investment_info_table.ipynb  pyproject.toml  requirements.txt
services/lambda_data_fetcher/.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _queue.data.json  _queue.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _ssl.data.json  _ssl.meta.json  (+126 more)
services/lambda_data_fetcher/.mypy_cache/3.13/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
services/lambda_data_fetcher/.mypy_cache/3.13/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  coroutines.data.json  coroutines.meta.json  events.data.json  events.meta.json  exceptions.data.json  exceptions.meta.json  futures.data.json  futures.meta.json  locks.data.json  locks.meta.json  mixins.data.json  mixins.meta.json  protocols.data.json  protocols.meta.json  queues.data.json  queues.meta.json  runners.data.json  runners.meta.json  selector_events.data.json  selector_events.meta.json  streams.data.json  streams.meta.json  subprocess.data.json  subprocess.meta.json  taskgroups.data.json  taskgroups.meta.json  tasks.data.json  tasks.meta.json  threads.data.json  threads.meta.json  timeouts.data.json  timeouts.meta.json  transports.data.json  transports.meta.json  unix_events.data.json  unix_events.meta.json
services/lambda_data_fetcher/.mypy_cache/3.13/collections/: __init__.data.json  __init__.meta.json  (+2 more)
services/lambda_data_fetcher/src/: lambda_function.py
services/lambda_data_fetcher/src/lambda_data_fetcher/: dividend_data_duplicate_dropper.py  dividend_data_formatter.py  dividend_data_saver.py  exchange_rate_fetcher.py  historical_data_fetcher.py  investment_info_fetcher.py  lambda_data_fetcher.py  lambda_function.py  main.py  rds_connect.py  ticker_and_investment_code_fetcher.py  value_data_duplicate_dropper.py  value_data_formatter.py  value_data_saver.py  yfinance_test.ipynb
services/lambda_data_fetcher/src/modules/: get_environment_variable.py  investment_info_fetcher.py  value_data_saver.py
(+759 files in other folders)
